# Orchestr8

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  example_calculator.py  example_diff_script.py  example_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_env.bat  setup_env.sh  tree.txt
.github/workflows/: ci.yml
Databases/: __init__.py  connect_to_db.py
Databases/SQLite/scripts/: example_loader.py  sqlite_connect.py
Job/: __init__.py  alerts.py  automated_test.py  test_config_details.md  test_context_manager.py  test_parameter.yaml
Scheduler/: __init__.py  commands.sql  task_manager.py  task_workflow.py
Scheduler/src/: SETTINGS.py  __init__.py  config.py  copy_settings.py  create_task.py  import_file.py  job_scheduler.py  modify_task.py  module_registry.py  parse_create_task.py  parse_modify_task.py  utils.py
docs/: index.md
docs/developer_guide/: contributing.md
docs/user_guide/: installation.md
tests/: test_function_registry.py  test_parse_create_task.py  test_parse_modify_task.py  test_task_creation.py  test_task_modification.py  test_utils.py
