[metadata]
name = Orchestr8
version = 0.1.0
description = A workflow orchestration tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Sola Richard Olorunfemi
author_email = Richardolorunfemi75@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    python-dotenv
    apscheduler
    pyyaml
    sqlalchemy
python_requires = >=3.7
include_package_data = true

[options.packages.find]
include =
    Orchestr8
    Orchestr8.Job
    Orchestr8.Scheduler
    Orchestr8.tests
    Orchestr8.Databases

[options.extras_require]
snowflake =
    Orchestr8.Databases.Snowflake
    snowflake-connector-python
postgres =
    Orchestr8.Databases.Postgres
    psycopg2
mysql =
    Orchestr8.Databases.MySql
    mysql-connector-python
tests =
    pytest

[coverage:run]
branch = True
source =
    Orchestr8

[coverage:report]
show_missing = True
skip_covered = True